[package]
name = "transfer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = "2.0.10"
spl-token = { version = "6.0.0", features = [ "no-entrypoint" ] }

[dev-dependencies]
solana-program-test = "2.0.10"
solana-sdk = "2.0.10"

[lib]
crate-type = ["cdylib", "lib"]